[package]
name = "orion"
version = "0.1.0"
edition = "2021"
authors = ["Rehan"]
description = "Orion – High-performance task orchestration engine in Rust"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.7"
sled = "0.34"
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ring = "0.17"

# Scheduler dependencies
chrono = "0.4"
cron = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
anyhow = "1.0.100"
thiserror = "1.0.69"
rand = "0.10.0-rc.8"

# Node Manager dependencies - FIXED VERSIONS
dashmap = "5.5"  # Changed from 7.0.0-rc2 to stable version
bincode = "1.3"  # Changed from 3.0.0 to stable version

# Add these Node Manager dependencies:
flume = "0.11"
crossbeam = "0.8"
parking_lot = "0.12"
lru = "0.12"
quick-error = "2.0"
rcgen = "0.12"
rustls = "0.22"
rustls-pemfile = "2.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"